# nagori

./: .gitignore  .octocov.desktop.yaml  .octocov.yaml  .oxfmtrc.json  .oxlintrc.json  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  deny.toml  lefthook.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.bundle.conf.json  tauri.conf.dev.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  palette.json  settings.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/autogenerated/: add_entry.toml  cancel_ai_action.toml  cli_install_status.toml  close_palette.toml  copy_entries_combined.toml  copy_entry.toml  copy_entry_from_palette.toml  data_dir_sync_warning.toml  delete_entries.toml  delete_entry.toml  get_ai_availability.toml  get_capabilities.toml  get_entry.toml  get_entry_preview.toml  get_entry_preview_full.toml  get_permissions.toml  get_semantic_index_status.toml  hide_palette.toml  last_hotkey_failure.toml  list_paste_options.toml  list_pinned_entries.toml  list_recent_entries.toml  open_palette.toml  open_settings.toml  open_url_external.toml  password_manager_preset.toml  paste_entry.toml  paste_entry_from_palette.toml  paste_entry_representation_from_palette.toml  pin_entry.toml  preview_entry.toml  purge_deleted_entries.toml  rebuild_semantic_index.toml  repaste_last.toml  run_quick_action.toml  save_ai_result.toml  search_clipboard.toml  set_capture_enabled.toml  start_ai_action.toml  toggle_palette.toml
apps/desktop/src-tauri/src/: commands.rs  dto.rs  error.rs  fallback.rs  hotkey.rs  image_scheme.rs  lib.rs  main.rs  startup.rs  state.rs  tray.rs
apps/desktop/src-tauri/src/commands/: ai_commands.rs  entry_commands.rs  installer.rs  mod.rs  paste_commands.rs  preview.rs  settings_commands.rs  updater.rs  window_commands.rs
apps/desktop/src-tauri/src/dto/: mod.rs  platform.rs  preview.rs  settings.rs
apps/desktop/src-tauri/src/state/: clear_on_quit.rs  mod.rs  startup.rs  test_support.rs  window_focus.rs
apps/desktop/src-tauri/tests/: command_surface.rs
crates/nagori-ai/: Cargo.toml
crates/nagori-ai-apple/: Cargo.toml  build.rs
crates/nagori-ai-apple/src/: availability.rs  bridge.rs  delta.rs  embed.rs  event.rs  foundation.rs  lib.rs  pump.rs  stream.rs  translate.rs
crates/nagori-ai-apple/swift/: Package.swift
crates/nagori-ai-apple/swift/Sources/nagori_apple/: Bridge.swift
crates/nagori-ai/src/: actions.rs  backend.rs  engine.rs  lib.rs  local.rs  mock.rs  openai.rs  provider.rs  quick.rs  redaction.rs  resolver.rs
crates/nagori-cli/: Cargo.toml  build.rs
crates/nagori-cli/src/: main.rs  output.rs
crates/nagori-cli/src/commands/: add.rs  ai.rs  capabilities.rs  clear.rs  copy.rs  daemon.rs  delete.rs  doctor.rs  get.rs  list.rs  mod.rs  paste.rs  pin.rs  quick.rs  search.rs
crates/nagori-cli/tests/: cli_snapshots.rs
crates/nagori-core/: Cargo.toml
crates/nagori-core/src/: errors.rs  factory.rs  image_signature.rs  lib.rs  limits.rs  model.rs  policy.rs  repositories.rs  settings.rs  storage_location.rs  text.rs
crates/nagori-core/src/factory/: tests.rs
crates/nagori-core/src/model/: ai.rs  code_language.rs  content.rs  file_path.rs  file_summary.rs  mod.rs  paste_option.rs  representations.rs  search.rs  semantic.rs
crates/nagori-core/src/model/ai/: engine.rs
crates/nagori-core/src/policy/tests/: classifier.rs  detector.rs  mod.rs  redaction.rs  user_regex.rs
crates/nagori-core/src/services/: mod.rs  search.rs
crates/nagori-daemon/: Cargo.toml
crates/nagori-daemon/src/: ai_registry.rs  capture_loop.rs  health.rs  ipc_handler.rs  lib.rs  maintenance.rs  runtime.rs  search_cache.rs  semantic_index.rs  serve.rs  thumbnails.rs
crates/nagori-daemon/src/capture_loop/: mod.rs
crates/nagori-daemon/src/capture_loop/tests/: backoff.rs  baseline.rs  dedup_insert.rs  filters.rs  images.rs  mod.rs  secure_focus.rs
crates/nagori-daemon/src/runtime/: actions.rs  doctor.rs  entries.rs  mod.rs  search.rs  settings.rs  tests.rs  thumbnails.rs
crates/nagori-daemon/src/runtime/tests/: ai.rs  clipboard.rs  ipc.rs  lifecycle.rs  mod.rs  permissions.rs  search.rs  settings.rs
crates/nagori-daemon/src/serve/: ipc.rs  lifecycle.rs  mod.rs
crates/nagori-ipc/: Cargo.toml
crates/nagori-ipc/src/: client.rs  framing.rs  lib.rs  protocol.rs  server.rs  token.rs  windows_security.rs
crates/nagori-ipc/src/server/: accept.rs  connection.rs  health.rs  mod.rs  unix.rs  windows.rs
crates/nagori-platform/: Cargo.toml
crates/nagori-platform-linux/: Cargo.toml
crates/nagori-platform-linux/src/: capability.rs  clipboard.rs  hotkey.rs  lib.rs  paste.rs  permissions.rs  window.rs
crates/nagori-platform-macos/: Cargo.toml
crates/nagori-platform-macos/src/: capability.rs  clipboard.rs  hotkey.rs  lib.rs  paste.rs  permissions.rs  preview.rs  window.rs
crates/nagori-platform-macos/src/clipboard/: file_url.rs  mod.rs  read.rs  transcode.rs  write.rs
crates/nagori-platform-macos/src/clipboard/tests/: capture.rs  exclusion.rs  file_url.rs  mod.rs  round_trip.rs  transcode.rs
crates/nagori-platform-native/: Cargo.toml  build.rs
crates/nagori-platform-native/src/: lib.rs
crates/nagori-platform-windows/: Cargo.toml
crates/nagori-platform-windows/src/: capability.rs  clipboard.rs  hotkey.rs  lib.rs  paste.rs  permissions.rs  window.rs
crates/nagori-platform/src/: blocking.rs  capability.rs  clipboard.rs  hotkey.rs  image_decode.rs  lib.rs  paste.rs  permissions.rs  preview.rs  window.rs
crates/nagori-storage/: Cargo.toml
crates/nagori-storage/benches/: storage_search.rs
crates/nagori-storage/src/: lib.rs  process_lock.rs  sqlite.rs
crates/nagori-storage/src/sqlite/: audit.rs  convert.rs  entry.rs  maintenance.rs  mod.rs  permissions.rs  pool.rs  schema.rs  search.rs  semantic.rs  settings.rs  thumbnail.rs
crates/nagori-storage/src/sqlite/tests/: audit.rs  entries.rs  mod.rs  permissions.rs  representations.rs  schema.rs  search.rs  settings.rs  thumbnails.rs
docs/: cli.md  ipc.md  (+5 more)
(+156 files in other folders)
