[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/nagori-ai",
  "crates/nagori-cli",
  "crates/nagori-core",
  "crates/nagori-daemon",
  "crates/nagori-ipc",
  "crates/nagori-platform",
  "crates/nagori-platform-linux",
  "crates/nagori-platform-macos",
  "crates/nagori-platform-windows",
  "crates/nagori-search",
  "crates/nagori-storage",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/mhiro2/nagori"
rust-version = "1.95"
version = "0.0.0"

[workspace.dependencies]
anyhow = "1"
arboard = "3"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "6"
hex = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "deny"
# Public API is still in flux; tighten to `warn` once the surface stabilises.
missing_docs = "allow"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"
# Factory/getter style noise; revisit when the public surface stabilises.
must_use_candidate = "allow"
# `AppSettings` legitimately bundles many feature toggles.
struct_excessive_bools = "allow"

[profile.release]
lto = "thin"
strip = true
