[package]
name = "nagori-ai-apple"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
nagori-ai = { path = "../nagori-ai" }
nagori-core = { path = "../nagori-core" }
tokio = { workspace = true }
tokio-util.workspace = true

# `swift-rs` only does work on macOS, where `build.rs` invokes `SwiftLinker`.
# It is keyed to the *host* platform here (build scripts run on the host) so
# Linux / Windows CI never pulls it in; cross-compiling a macOS target from a
# non-macOS host is out of scope and skipped by the inner target-os guard.
[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1", features = ["build"] }

[dev-dependencies]
# `test-util` enables `#[tokio::test(start_paused = true)]` so the stall-guard
# timeout test advances the virtual clock instead of sleeping out the full
# deadline in wall-clock time. Declared here rather than leaning on workspace
# feature unification so the crate also builds in isolation (`-p`).
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
