[package]
name = "nagori-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
nagori-core = { path = "../nagori-core" }
serde_json.workspace = true
time.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
