[package]
name = "nagori-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
dirs.workspace = true
nagori-ai = { path = "../nagori-ai" }
nagori-core = { path = "../nagori-core" }
nagori-ipc = { path = "../nagori-ipc" }
nagori-platform = { path = "../nagori-platform" }
nagori-search = { path = "../nagori-search" }
nagori-storage = { path = "../nagori-storage" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
