[package]
name = "nagori-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
dirs.workspace = true
futures.workspace = true
nagori-ai = { path = "../nagori-ai" }
nagori-core = { path = "../nagori-core" }
nagori-ipc = { path = "../nagori-ipc" }
nagori-platform = { path = "../nagori-platform" }
nagori-search = { path = "../nagori-search" }
# The semantic index ships in the daemon, so enable its sqlite-vec backend.
nagori-storage = { path = "../nagori-storage", features = ["semantic-index"] }
image.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
# `test-util` enables `#[tokio::test(start_paused = true)]` so the
# embedding-permit timeout test advances the deadline without sleeping.
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
