[package]
name = "nagori-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nagori-core = { path = "../nagori-core" }
nagori-platform = { path = "../nagori-platform" }
dirs.workspace = true
getrandom = "0.4"
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Security_Authorization",
  "Win32_Storage_FileSystem",
  "Win32_System_Memory",
  "Win32_System_Threading",
]

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
