[package]
name = "nagori-platform-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
nagori-core = { path = "../nagori-core" }
nagori-platform = { path = "../nagori-platform" }
time.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
hex.workspace = true
image.workspace = true
# `poll(2)` on the wl-clipboard pipe lets us bound a hung publisher
# without spinning a tokio worker forever. The Linux platform crate
# already gates on `target_os = "linux"`, so libc is only pulled in for
# the real host build, not for the inert macOS/Windows stubs.
libc = "0.2"
sha2.workspace = true
url.workspace = true
wl-clipboard-rs = "0.9"

[lints]
workspace = true
