[package]
name = "nagori-platform-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arboard.workspace = true
async-trait.workspace = true
nagori-core = { path = "../nagori-core" }
nagori-platform = { path = "../nagori-platform" }
time.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
enigo = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "NSPasteboard", "NSPasteboardItem", "NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSString", "NSArray", "NSData", "NSURL"] }
url = { workspace = true }

[lints]
workspace = true
