[package]
name = "nagori-platform-native"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
nagori-ai = { path = "../nagori-ai" }
nagori-core = { path = "../nagori-core" }
nagori-daemon = { path = "../nagori-daemon" }
nagori-platform = { path = "../nagori-platform" }
nagori-storage = { path = "../nagori-storage" }

[target.'cfg(target_os = "macos")'.dependencies]
nagori-platform-macos = { path = "../nagori-platform-macos" }

[target.'cfg(target_os = "windows")'.dependencies]
nagori-platform-windows = { path = "../nagori-platform-windows" }

[target.'cfg(target_os = "linux")'.dependencies]
nagori-platform-linux = { path = "../nagori-platform-linux" }

[lints]
workspace = true
