[package]
name = "nagori-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
nagori-core = { path = "../nagori-core" }
serde.workspace = true
time.workspace = true
tokio.workspace = true

[lints]
workspace = true
