[package]
name = "nagori-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "nagori_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
async-trait = { workspace = true }
nagori-ai = { path = "../../../crates/nagori-ai" }
nagori-core = { path = "../../../crates/nagori-core" }
nagori-daemon = { path = "../../../crates/nagori-daemon" }
nagori-ipc = { path = "../../../crates/nagori-ipc" }
nagori-platform = { path = "../../../crates/nagori-platform" }
nagori-search = { path = "../../../crates/nagori-search" }
nagori-storage = { path = "../../../crates/nagori-storage" }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-updater = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[target."cfg(target_os = \"macos\")".dependencies]
nagori-platform-macos = { path = "../../../crates/nagori-platform-macos" }

[target."cfg(target_os = \"windows\")".dependencies]
nagori-platform-windows = { path = "../../../crates/nagori-platform-windows" }

[target."cfg(target_os = \"linux\")".dependencies]
nagori-platform-linux = { path = "../../../crates/nagori-platform-linux" }

[lints]
workspace = true
